# tensorgym

./: .gitignore  LICENSE  ML Stack for LLM Inference.md  Makefile  README.md  RESEARCH_MANIFEST.md  TENSORGYM_SPEC.md  agents.md  pyproject.toml  requirements.txt
.claude/: launch.json
apps/web/: index.html
content/capsules/: autograd-basics.yaml  basic-profiling.yaml  broadcasting.yaml  devices.yaml  dtypes.yaml  gradient-accumulation.yaml  matrix-multiplication.yaml  nn-module-basics.yaml  reduction-dimensions-keepdim.yaml  tensor-creation.yaml  tensor-indexing.yaml  tensor-reshaping.yaml  tensor-shapes.yaml  train-eval-mode.yaml  training-loop-basics.yaml
content/challenges/: autograd-accumulate-001.yaml  autograd-chain-001.yaml  autograd-detach-clone-001.yaml  autograd-gradient-001.yaml  autograd-higher-order-001.yaml  autograd-no-grad-001.yaml  debug-inplace-error-001.yaml  debug-missing-grad-001.yaml  debug-shape-mismatch-001.yaml  debug-wrong-reduction-001.yaml  nn-custom-loss-001.yaml  nn-linear-module-001.yaml  nn-param-count-001.yaml  nn-skip-connection-001.yaml  nn-train-eval-toggle-001.yaml  nn-training-step-001.yaml  perf-batch-matmul-001.yaml  perf-memory-001.yaml  perf-vectorize-001.yaml  perf-view-vs-copy-001.yaml  tensor-broadcasting-add-001.yaml  tensor-col-normalize-001.yaml  tensor-create-zeros-001.yaml  tensor-fancy-index-001.yaml  tensor-one-hot-001.yaml  tensor-stack-batch-001.yaml  (+4 more)
docs/: ARCHITECTURE.md  LEARNER_FLOWS.md  THREAT_MODEL.md
tests/: conftest.py  test_content_verification.py  test_executor.py  test_feedback.py  test_flow_e2e.py
(+108 files in other folders)
